# classroomapi

./: LICENSE  README.md  pyproject.toml  script.py
classroomapi/: __init__.py  assignment.py  classroom.py  classroom_object.py  course.py  coursework.py  material.py  submission.py  topic.py  user.py
